# osrs-highscores-search-rust

./: Cargo.toml  README.md
src/: lib.rs
